fixed large-text spacing issues, also applied text-sizer to buttons

--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -13,14 +13,15 @@ body {
 }
 
 .message-wrapper {
-    padding: .75rem 0 .5rem 0;
+    padding: .75em 0 .5em 0;
     border-top: 1px dotted transparent;
     margin-top: 1rem;
     .btn {
         float: right;
         cursor: pointer;
-        padding-top: .1rem;
-        padding-bottom: .1rem;
+        padding-top: .1em;
+        padding-bottom: .1em;
+        font-size: .875em;
         &.btn-outline-danger {
             border-color: $button;
             color: $button;
@@ -39,9 +40,9 @@ body {
     }
     .timestamp {
         background: $bg;
-        padding-right: .5rem;
-        margin-top: -1.5rem;
-        margin-bottom: 1.5rem;
+        padding-right: .5em;
+        margin-top: -1.5em;
+        margin-bottom: 1.5em;
         display: inline-block;
         position: absolute;
         color: rgba($text, .5);
